# yougile-rs

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.openapi-generator/: FILES
docs/: AuthKeyDto.md  AuthKeyWithDetailsDto.md  BoardDto.md  BoardListDto.md  BoardListDtoBase.md  BoardPermissionsDto.md  ChatIdDto.md  ChatMessageDto.md  ChatMessageListDto.md  ChatMessageListDtoBase.md  CheckList.md  CheckListItem.md  ColumnDto.md  ColumnListDto.md  ColumnListDtoBase.md  ColumnPermissionsDto.md  CompanyDto.md  CompanyListDto.md  CompanyListDtoBase.md  CreateBoardDto.md  CreateChatMessageDto.md  CreateColumnDto.md  CreateDepartmentDto.md  CreateGroupChatDto.md  CreateProjectDto.md  CreateProjectRoleDto.md  CreateSprintStickerDto.md  CreateSprintStickerStateDto.md  CreateStopwatch.md  CreateStringStickerDto.md  CreateStringStickerStateDto.md  CreateTaskDto.md  CreateTimer.md  CreateUserDto.md  CreateWebhookDto.md  CredentialsWithCompanyDto.md  CredentialsWithCompanyOptionalDto.md  CredentialsWithNameDto.md  Deadline.md  DefaultApi.md  (+59 more)
examples/: advanced_usage.rs  basic_usage.rs  file_upload.rs
src/: client.rs  error.rs  lib.rs
src/apis/: auth.rs  boards.rs  chats.rs  columns.rs  configuration.rs  default_api.rs  departments.rs  files.rs  group_chats.rs  mod.rs  projects.rs  stickers.rs  tasks.rs  users.rs  webhooks.rs
src/models/: auth_key.rs  auth_key_dto.rs  auth_key_with_details_dto.rs  board.rs  board_dto.rs  (+119 more)
yougile-api-client/: Cargo.toml
yougile-sdk/: Cargo.toml
yougile-sdk/examples/: advanced_usage.rs  basic_usage.rs  comprehensive_usage.rs
yougile-sdk/src/: builder.rs  convenience.rs  error.rs  lib.rs
yougile-sdk/src/resources/: auth.rs  boards.rs  chats.rs  columns.rs  departments.rs  files.rs  group_chats.rs  mod.rs  projects.rs  stickers.rs  tasks.rs  users.rs  webhooks.rs
yougile-tui/: Cargo.toml  README.md
yougile-tui/src/: api.rs  app.rs  config.rs  handlers.rs  main.rs  ui.rs
yougile-tui/src/app/: data_loading.rs  input.rs  mod.rs  navigation.rs  state.rs
yougile-tui/src/ui/: mod.rs  styles.rs  utils.rs
yougile-tui/src/ui/views/: boards.rs  help.rs  kanban.rs  mod.rs  projects.rs
yougile-tui/src/ui/widgets/: mod.rs  popups.rs  task_card.rs  task_detail.rs
(+76 files in other folders)
