[package]
name = "yougile-sdk"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "High-level SDK for YouGile API with builder pattern and convenience methods"
license = "MIT"
edition = "2024"

[dependencies]
yougile-client = { path = "../" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio-test = "0.4"
